# perplexity-ai-clone

./: .env.example  .gitignore  .npmrc  .spark-initial-sha  AGENTS.md  OAUTH_SETUP.md  PRD.md  README.md  TAVILY_SETUP.md  WIRING_MAP.md  audit-gap-phases.md  closeout-npm-audit.json  closeout-npm-ls.txt  eslint-cluster-c.json  eslint-cluster-c2.json  eslint-final.json  eslint-out.json  eslint-slice3-final.json  eslint-slice3-final2.json  eslint-slice3-final3.json  eslint-slice3-v2.json  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  phase-3-high-risk-correctness-execution.md  phase-4-cluster-a-slice-1-plan.md  phase-4-cluster-a-slice-2-plan.md  phase-4-cluster-a-slice-2-verification.md  phase-4-cluster-b-plan.md  phase-4-enforcement-supervisor-entry.md  phase-4-medium-risk-hardening-execution.md  runtime.config.json  smoketest.mjs  start-services.ps1  tmp-api-reliability.json  tsconfig.json  vercel.json  vite.config.ts  (+2 more)
config/: mcp_config.json
docs/: AGENT-VERIFICATION.md  BATCH-07-COMPLETE.md  BATCH-08-COMPLETE.md  BATCH-09-COMPLETE.md  BATCH-10-COMPLETE.md  DEPENDENCY-HEALTH.md  IMAGE-LAYER.md  PERPLEXITY-TELESCOPE-ANALYSIS.md  PHASE-01-AI-PROMPT.md  PHASE-01-COMPLETE.md  PHASE-02-AI-PROMPT.md  PHASE-02-COMPLETE.md  PHASE-03-AI-PROMPT.md  PHASE-03-COMPLETE.md  PHASE-04-AI-PROMPT.md  PHASE-04-COMPLETE.md  PHASE-05-AI-PROMPT.md  PHASE-05-COMPLETE.md  PHASE-06-AI-PROMPT.md  (+5 more)
python/jarvis_visual_engine/: README.md  pyproject.toml
python/jarvis_visual_engine/jarvis_visual_engine/: __init__.py  __main__.py  openai_vision.py  server.py
(+516 files in other folders)
